<resources>
    <string name="app_name">QhalaInterview</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="title">Title : Clancy\'s Without Remorse</string>
    <string name="release_date_2021_04_29">Release Date : 2021-04-29</string>
    <string name="stars_7_3">Stars : 7.3</string>
    <string name="back">Back</string>
    <string name="titleText">Title :</string>
    <string name="overview">Overview:</string>
    <string name="_7_7">7.7</string>
    <string name="vote_average">Vote Average</string>
    <string name="_2021_04_07">2021-04-07</string>
    <string name="release_date">Release Date</string>
    <string name="lorem">My reason for deferment is that I am encountering family issues and financial challenges which have made me to work and support my family. Due to the current circumstances I have been unable to engage in the ongoing online university class which has rendered me unfit to sit for the examinations.</string>
    <string name="change_theme">Change Theme</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="data_unavailabe">Data Unavailable</string>
</resources>